refactor: got no crop negative control outputs working

--- a/sandbox/restructure_make_negative_controls.ipynb
+++ b/sandbox/restructure_make_negative_controls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "99cf8359",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/bhkuser/bhklab/katy/readii_2_roqc\n"
+      "/home/bhkuser/bhklab/katy\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "686fe011",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "5f226ee0",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "21877079",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "45f840b5",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "824d2c0d",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "b12dc183",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "0fff65e2",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "fb04cfc5",
    "metadata": {},
    "outputs": [],
@@ -206,13 +206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "c8e25dd5",
    "metadata": {},
    "outputs": [],
    "source": [
     "crop = ''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d05ec8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -252,21 +260,23 @@
     "    # get image modality for file writer\n",
     "    image_modality = dataset_config['MIT']['MODALITIES']['image']\n",
     "\n",
-    "# TODO: Figure out how to handle the no crop and resize set for the output index path\n",
-    "    # # Set up the readii subdirectory for the image being processed, specifically the crop and resize level\n",
-    "    # if crop == '' and resize == []:\n",
-    "    #     proc_image_type = 'original_size'\n",
-    "    # else:\n",
-    "    #     proc_image_type = f'{crop}_{resize_string}'\n",
+    "    # Set up the readii subdirectory for the image being processed, specifically the crop and resize level\n",
+    "    if crop == '' and resize == []:\n",
+    "        # get the original image size to use for output directory, without the slice count\n",
+    "        image_size_string = get_resize_string(image.GetSize()[0:2])\n",
+    "        # make the slice index an n since different images have different slice counts\n",
+    "        crop_setting_string = f'original_{image_size_string}_n'\n",
+    "    else:\n",
+    "        crop_setting_string = f'{crop}_{resize_string}'\n",
     "\n",
     "    # Set up writer for saving out the negative controls and index file\n",
     "    nifti_writer = NIFTIWriter(\n",
-    "            root_directory = output_dir,\n",
-    "            filename_format = \"{crop}_{Resize}/{dir_original_image}/{dirname_mask}_{ImageID_mask}/\" + f\"{image_modality}\" + \"_{Permutation}_{Region}.nii.gz\",\n",
+    "            root_directory = output_dir / crop_setting_string,\n",
+    "            filename_format = \"{dir_original_image}/{dirname_mask}_{ImageID_mask}/\" + f\"{image_modality}\" + \"_{Permutation}_{Region}.nii.gz\",\n",
     "            create_dirs = True,\n",
     "            existing_file_mode = existing_file_mode,\n",
     "            sanitize_filenames = True,\n",
-    "            index_filename = output_dir / f'{crop}_{resize_string}' / f\"readii_{dataset_name}_index.csv\",\n",
+    "            index_filename = f\"readii_{dataset_name}_index.csv\",\n",
     "            overwrite_index = overwrite_index\n",
     "        )\n",
     "    \n",
@@ -335,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "36eb7daf",
    "metadata": {},
    "outputs": [
@@ -343,7 +353,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating negative controls for each image-mask pair...: 100%|██████████| 2/2 [00:00<00:00, 1032.44it/s]\n"
+      "Generating negative controls for each image-mask pair...: 100%|██████████| 2/2 [00:00<00:00, 1106.24it/s]\n"
      ]
     }
    ],
@@ -385,14 +395,13 @@
     "                                                    ) for _, data_row in tqdm(edges_index.iterrows(),\n",
     "                                                                                desc=\"Generating negative controls for each image-mask pair...\",\n",
     "                                                                                total=len(edges_index))]\n",
-    " \n",
-    "# negative_control_generator(dataset_config, image_path, mask_path, images_dir_path, readii_image_dir, overwrite=True)"
+    " \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca66fcf7",
+   "id": "ae3c9fea",
    "metadata": {},
    "outputs": [],
    "source": []
