refactor: separated negative control generator into separate function

--- a/sandbox/restructure_make_negative_controls.ipynb
+++ b/sandbox/restructure_make_negative_controls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "99cf8359",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/bhkuser/bhklab/katy\n"
+      "/home/bhkuser/bhklab/katy/readii_2_roqc\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "686fe011",
    "metadata": {},
    "outputs": [],
@@ -41,18 +41,19 @@
     "\n",
     "import pandas as pd\n",
     "import itertools\n",
-    "import logging"
+    "import logging\n",
+    "import SimpleITK as sitk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "5f226ee0",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = \"NSCLC-Radiomics_test\"\n",
-    "overwrite = False\n",
+    "overwrite = True\n",
     "seed = 10"
    ]
   },
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "21877079",
    "metadata": {},
    "outputs": [],
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "45f840b5",
    "metadata": {},
    "outputs": [],
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "824d2c0d",
    "metadata": {},
    "outputs": [],
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "b12dc183",
    "metadata": {},
    "outputs": [],
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "0fff65e2",
    "metadata": {},
    "outputs": [],
@@ -160,12 +161,12 @@
     "if crop != \"\" and resize != []:\n",
     "    readii_index_filepath = readii_image_dir / f\"{crop}_{get_resize_string(resize)}\" / f'readii_{dataset_name}_index.csv'\n",
     "else:\n",
-    "    readii_index_filepath = readii_image_dir / f'readii_{dataset_name}_index.csv'"
+    "    readii_index_filepath = readii_image_dir.glob(f\"original_*/readii_{dataset_name}_index.csv\").__next__()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "fb04cfc5",
    "metadata": {},
    "outputs": [],
@@ -193,7 +194,7 @@
     "                                                                      [crop],\n",
     "                                                                      [get_resize_string(resize)])}\n",
     "        if requested_image_types.issubset(processed_image_types) and requested_samples.issubset(processed_samples):\n",
-    "            print(\"Requested negative controls have already been generated for these samples or are listed in the readii index as if they have been. Set overwrite to true if you want to re-process these.\")"
+    "            print(\"All requested negative controls have already been generated for these samples or are listed in the readii index as if they have been. Set overwrite to true if you want to re-process these.\")"
    ]
   },
   {
@@ -206,37 +207,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "c8e25dd5",
+   "execution_count": 17,
+   "id": "7d05ec8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "crop = ''"
+    "def negative_control_generator(sample_id:str,\n",
+    "                               image:sitk.Image,\n",
+    "                               mask:sitk.Image,\n",
+    "                               regions, \n",
+    "                               permutations, \n",
+    "                               crop, \n",
+    "                               resize,\n",
+    "                               image_meta_id,\n",
+    "                               mask_meta_id,\n",
+    "                               nifti_writer:NIFTIWriter\n",
+    "                               ):\n",
+    "    negative_control_image_paths = []\n",
+    "\n",
+    "    # Set up negative control manager with settings from config\n",
+    "    manager = NegativeControlManager.from_strings(\n",
+    "        negative_control_types=permutations,\n",
+    "        region_types=regions,\n",
+    "        random_seed=seed\n",
+    "    )\n",
+    "    # Process and save negative control images\n",
+    "    for proc_image, permutation, region in manager.apply(image, mask):\n",
+    "        # apply crop and resize\n",
+    "        if crop != \"\" and resize != []:\n",
+    "            proc_image, proc_mask = crop_and_resize_image_and_mask(proc_image, \n",
+    "                                                                   mask, \n",
+    "                                                                   crop_method = crop, \n",
+    "                                                                   resize_dimension = resize)\n",
+    "        # save out negative controls\n",
+    "        try:\n",
+    "            # The capitalized arguments are here on purpose to manipulate the order of the columns in the index file\n",
+    "            out_path = nifti_writer.save(\n",
+    "                            proc_image,\n",
+    "                            ImageID = image_meta_id,\n",
+    "                            MaskID = mask_meta_id,\n",
+    "                            Permutation=\"original\",\n",
+    "                            Region=\"full\",\n",
+    "                            Resize=get_resize_string(resize),\n",
+    "                            SampleID=sample_id,\n",
+    "                            crop=crop\n",
+    "                        )\n",
+    "        except NiftiWriterIOError:\n",
+    "            message = f\"{permutation} {region} negative control file already exists for {sample_id}. If you wish to overwrite, set overwrite to True.\"\n",
+    "            logger.debug(message)\n",
+    "        \n",
+    "        negative_control_image_paths.append(out_path)\n",
+    "\n",
+    "    return negative_control_image_paths"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d05ec8d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ce2a1096",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def negative_control_generator(dataset_config:dict, \n",
-    "                               image_path:Path, \n",
-    "                               mask_path:Path, \n",
-    "                               images_dir_path:Path, \n",
-    "                               output_dir:Path, \n",
-    "                               sample_id:str = None, \n",
-    "                               mask_image_id:str = None, \n",
-    "                               overwrite:bool = False):\n",
+    "def image_preprocessor(dataset_config:dict, \n",
+    "                        image_path:Path, \n",
+    "                        mask_path:Path, \n",
+    "                        images_dir_path:Path, \n",
+    "                        output_dir:Path, \n",
+    "                        sample_id:str = None, \n",
+    "                        mask_image_id:str = None, \n",
+    "                        overwrite:bool = False):\n",
     "    if overwrite:\n",
     "        existing_file_mode = 'OVERWRITE'\n",
     "        overwrite_index = True\n",
@@ -259,6 +298,10 @@
     "    image, mask = load_image_and_mask(mit_images_dir / image_path, mit_images_dir / mask_path)\n",
     "    # get image modality for file writer\n",
     "    image_modality = dataset_config['MIT']['MODALITIES']['image']\n",
+    "    # make image identifier string for file writer\n",
+    "    image_meta_id = f\"{image_path.parent.name}\"\n",
+    "    # make mask identifier string for file writer\n",
+    "    mask_meta_id = f\"{mask_path.parent.name}_{mask_image_id.replace(' ', \"_\")}\"\n",
     "\n",
     "    # Set up the readii subdirectory for the image being processed, specifically the crop and resize level\n",
     "    if crop == '' and resize == []:\n",
@@ -272,7 +315,7 @@
     "    # Set up writer for saving out the negative controls and index file\n",
     "    nifti_writer = NIFTIWriter(\n",
     "            root_directory = output_dir / crop_setting_string,\n",
-    "            filename_format = \"{dir_original_image}/{dirname_mask}_{ImageID_mask}/\" + f\"{image_modality}\" + \"_{Permutation}_{Region}.nii.gz\",\n",
+    "            filename_format = f\"{image_path.parent}/{mask_meta_id}/{image_modality}\" + \"_{Permutation}_{Region}.nii.gz\",\n",
     "            create_dirs = True,\n",
     "            existing_file_mode = existing_file_mode,\n",
     "            sanitize_filenames = True,\n",
@@ -289,63 +332,43 @@
     "                                                               resize_dimension = resize)\n",
     "        # save out cropped image\n",
     "        try:\n",
+    "            # The capitalized arguments are here on purpose to manipulate the order of the columns in the index file\n",
     "            out_path = nifti_writer.save(\n",
     "                            crop_image,\n",
-    "                            PatientID=sample_id,\n",
-    "                            Region=\"original\",\n",
-    "                            Permutation=\"full\",\n",
-    "                            crop=crop,\n",
+    "                            ImageID = image_meta_id,\n",
+    "                            MaskID = mask_meta_id,\n",
+    "                            Permutation=\"original\",\n",
+    "                            Region=\"full\",\n",
     "                            Resize=resize_string,\n",
-    "                            ImageID_mask=mask_image_id.replace(' ', \"_\"),\n",
-    "                            dir_original_image=image_path.parent,\n",
-    "                            dirname_mask=mask_path.parent.name,\n",
+    "                            SampleID=sample_id,\n",
+    "                            crop=crop\n",
     "                        )\n",
     "        except NiftiWriterIOError:\n",
-    "            message = f\"{permutation} {region} negative control file already exists for {sample_id}. If you wish to overwrite, set overwrite to True.\"\n",
+    "            message = f\"{crop} {resize_string} original image file already exists for {sample_id}. If you wish to overwrite, set overwrite to True.\"\n",
     "            logger.debug(message)\n",
     "        \n",
     "        readii_image_paths.append(out_path)\n",
     "    # end original image processing\n",
     "\n",
-    "    # Set up negative control manager with settings from config\n",
-    "    manager = NegativeControlManager.from_strings(\n",
-    "        negative_control_types=permutations,\n",
-    "        region_types=regions,\n",
-    "        random_seed=seed\n",
-    "    )\n",
-    "    # Process and save negative control images\n",
-    "    for proc_image, permutation, region in manager.apply(image, mask):\n",
-    "        # apply crop and resize\n",
-    "        if crop != \"\" and resize != []:\n",
-    "            proc_image, proc_mask = crop_and_resize_image_and_mask(proc_image, \n",
-    "                                                                   mask, \n",
-    "                                                                   crop_method = crop, \n",
-    "                                                                   resize_dimension = resize)\n",
-    "        # save out negative controls\n",
-    "        try:\n",
-    "            out_path = nifti_writer.save(\n",
-    "                            proc_image,\n",
-    "                            PatientID=sample_id,\n",
-    "                            Region=region,\n",
-    "                            Permutation=permutation,\n",
-    "                            crop=crop,\n",
-    "                            Resize=resize_string,\n",
-    "                            ImageID_mask=mask_image_id.replace(' ', \"_\"),\n",
-    "                            dir_original_image=image_path.parent,\n",
-    "                            dirname_mask=mask_path.parent.name,\n",
-    "                        )\n",
-    "        except NiftiWriterIOError:\n",
-    "            message = f\"{permutation} {region} negative control file already exists for {sample_id}. If you wish to overwrite, set overwrite to True.\"\n",
-    "            logger.debug(message)\n",
-    "    \n",
-    "        readii_image_paths.append(out_path)\n",
+    "    if permutations != [] and regions != []:\n",
+    "        negative_control_image_paths = negative_control_generator(sample_id=sample_id,\n",
+    "                                                                  image = image,\n",
+    "                                                                  mask = mask,\n",
+    "                                                                  regions = regions,\n",
+    "                                                                  permutations = permutations,\n",
+    "                                                                  crop = crop,\n",
+    "                                                                  resize = resize,\n",
+    "                                                                  image_meta_id = image_meta_id,\n",
+    "                                                                  mask_meta_id = mask_meta_id,\n",
+    "                                                                  nifti_writer = nifti_writer)\n",
+    "        readii_image_paths.append(negative_control_image_paths)\n",
     "    \n",
     "    return readii_image_paths\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "36eb7daf",
    "metadata": {},
    "outputs": [
@@ -353,7 +376,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating negative controls for each image-mask pair...: 100%|██████████| 2/2 [00:00<00:00, 1106.24it/s]\n"
+      "Generating negative controls for each image-mask pair...: 100%|██████████| 2/2 [00:00<00:00, 742.62it/s]\n"
      ]
     }
    ],
@@ -367,7 +390,7 @@
     "if parallel:\n",
     "    # Use joblib to parallelize negative control generation\n",
     "    readii_image_paths = Parallel(n_jobs=n_jobs)(\n",
-    "                            delayed(negative_control_generator)(\n",
+    "                            delayed(image_preprocessor)(\n",
     "                                dataset_config=dataset_config, \n",
     "                                image_path=Path(data_row.filepath_image), \n",
     "                                mask_path=Path(data_row.filepath_mask), \n",
@@ -384,24 +407,24 @@
     "                            )\n",
     "                        )\n",
     "else:\n",
-    "    readii_image_paths = [negative_control_generator(dataset_config=dataset_config, \n",
-    "                                                    image_path=Path(data_row.filepath_image), \n",
-    "                                                    mask_path=Path(data_row.filepath_mask), \n",
-    "                                                    images_dir_path=images_dir_path, \n",
-    "                                                    output_dir=readii_image_dir,\n",
-    "                                                    sample_id=data_row.SampleID_image,\n",
-    "                                                    mask_image_id=data_row.ImageID_mask, \n",
-    "                                                    overwrite=overwrite\n",
-    "                                                    ) for _, data_row in tqdm(edges_index.iterrows(),\n",
-    "                                                                                desc=\"Generating negative controls for each image-mask pair...\",\n",
-    "                                                                                total=len(edges_index))]\n",
+    "    readii_image_paths = [image_preprocessor(dataset_config=dataset_config, \n",
+    "                                            image_path=Path(data_row.filepath_image), \n",
+    "                                            mask_path=Path(data_row.filepath_mask), \n",
+    "                                            images_dir_path=images_dir_path, \n",
+    "                                            output_dir=readii_image_dir,\n",
+    "                                            sample_id=data_row.SampleID_image,\n",
+    "                                            mask_image_id=data_row.ImageID_mask, \n",
+    "                                            overwrite=overwrite\n",
+    "                                            ) for _, data_row in tqdm(edges_index.iterrows(),\n",
+    "                                                                        desc=\"Generating negative controls for each image-mask pair...\",\n",
+    "                                                                        total=len(edges_index))]\n",
     " \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae3c9fea",
+   "id": "23e1e5ac",
    "metadata": {},
    "outputs": [],
    "source": []
