fix: add missing seed argument to negative control generator

--- a/sandbox/restructure_make_negative_controls.ipynb
+++ b/sandbox/restructure_make_negative_controls.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7d05ec8d",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,8 @@
     "                               resize,\n",
     "                               image_meta_id,\n",
     "                               mask_meta_id,\n",
-    "                               nifti_writer:NIFTIWriter\n",
+    "                               nifti_writer:NIFTIWriter,\n",
+    "                               seed = 10\n",
     "                               ):\n",
     "    negative_control_image_paths = []\n",
     "\n",
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "ce2a1096",
    "metadata": {},
    "outputs": [],
