--- a/sandbox/restructure_make_negative_controls.ipynb
+++ b/sandbox/restructure_make_negative_controls.ipynb
@@ -2,25 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "99cf8359",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/bhkuser/bhklab/katy/readii_2_roqc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd .."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "686fe011",
    "metadata": {},
    "outputs": [],
@@ -47,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5f226ee0",
    "metadata": {},
    "outputs": [],
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "21877079",
    "metadata": {},
    "outputs": [],
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "45f840b5",
    "metadata": {},
    "outputs": [],
@@ -97,7 +89,7 @@
     "    raise ValueError(message)\n",
     "\n",
     "dataset_config, dataset_name, full_dataset_name = load_dataset_config(dataset)\n",
-    "logger.info(f\"Creating negative controls for dataset: {dataset_name}\")"
+    "# logger.info(f\"Creating negative controls for dataset: {dataset_name}\")"
    ]
   },
   {
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "824d2c0d",
    "metadata": {},
    "outputs": [],
@@ -131,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b12dc183",
    "metadata": {},
    "outputs": [],
@@ -149,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0fff65e2",
    "metadata": {},
    "outputs": [],
@@ -166,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fb04cfc5",
    "metadata": {},
    "outputs": [],
@@ -369,18 +361,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "36eb7daf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Generating negative controls for each image-mask pair...: 100%|██████████| 2/2 [00:00<00:00, 742.62it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from readii_2_roqc.utils.metadata import make_edges_df\n",
     "\n",
@@ -425,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23e1e5ac",
+   "id": "d6a4401f",
    "metadata": {},
    "outputs": [],
    "source": []
