--- a/sandbox/label_data_for_prediction.ipynb
+++ b/sandbox/label_data_for_prediction.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "31767c66",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
     "        labels_and_features = pd.concat([outcome_data, feature_data], axis=1)\n",
     "\n",
     "        # Set up path for and save out labelled feature data\n",
-    "        out_path = dirs.PROCDATA / full_data_name / \"features\" / \"labelled\" / f\"{feature_type}_{outcome_name}\" / f\"{image_type}_labelled_features.csv\"\n",
+    "        out_path = feature_file_path.parent.parent / \"labelled\" / f\"{signature}_{outcome_name}\" / f\"{image_type}_labelled_features.csv\"\n",
     "\n",
     "        if not out_path.exists() or overwrite:\n",
     "            out_path.parent.mkdir(parents=True, exist_ok=True)\n",
@@ -91,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b6f7da0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = \"HEAD-NECK-RADIOMICS-HN1_windowed\"\n",
-    "signature = \"choi_opc_hpv_2020.yaml\"\n",
+    "dataset = \"RADCURE_windowed\"\n",
+    "signature = \"choi_opc_hpv_2020\"\n",
     "split = None\n",
     "\n",
     "labelled_data = label_data_for_prediction(dataset, signature, split, standard_event_label='hpv_status')"
