fix: correct error message typo and type hints for standard labels

--- a/sandbox/label_data_for_prediction.ipynb
+++ b/sandbox/label_data_for_prediction.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "31767c66",
    "metadata": {},
    "outputs": [],
@@ -43,14 +43,14 @@
     "def label_data_for_prediction(dataset:str,\n",
     "                              signature:str,\n",
     "                              split:str | None = None,\n",
-    "                              standard_event_label:str = None,\n",
-    "                              standard_time_label:str = None,\n",
+    "                              standard_event_label:str | None = None,\n",
+    "                              standard_time_label:str | None = None,\n",
     "                              overwrite:bool = False\n",
     "                              ) -> dict[str,pd.DataFrame]:\n",
     "    \"\"\"Set up and save out a dataframe of outcome labels and signature features for model prediction.\n",
     "    \"\"\"\n",
     "    if not standard_event_label and not standard_time_label:\n",
-    "        message = \"No outcome label specificiations have been set. Must set either standard_event_label or standard_time_label to proceed.\"\n",
+    "        message = \"No outcome label specifications have been set. Must set either standard_event_label or standard_time_label to proceed.\"\n",
     "        raise ValueError(message)\n",
     "\n",
     "    # Load the dataset configuration file and set up the dataset name versions\n",
